--- a/.gitignore
+++ b/.gitignore
@@ -6,36 +6,8 @@
 .RData
 .RDataTmp
 .Rproj
-
-# User-specific files
-.Ruserdata
-
-# Example code in package build process
-*-Ex.R
-
-# Output files from R CMD build
-/*.tar.gz
-
-# Output files from R CMD check
-/*.Rcheck/
-
-# RStudio files
 .Rproj.user/
-
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
-
-# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
-.httr-oauth
-
-# knitr and R markdown default cache directories
-*_cache/
-/cache/
-
-# Temporary files created by R markdown
-*.utf8.md
-*.knit.md
+.Ruserdata
 
 # R Environment Variables
 .Renviron
@@ -48,3 +20,5 @@ po/*~
 
 # RStudio Connect folder
 rsconnect/
+
+temperature.csv
